force-app/main/default/objects/Lead/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <description>Assignment Status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Routed</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>