force-app/main/default/objects/Lead/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <description>Customer Segment</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOLD</fullName>
                <default>true</default>
                <label>GOLD</label>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>INSTITUTIONAL</fullName>
            </value>
            <value>
                <fullName>MODERN_TRADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>