force-app/main/default/objects/Lead/fields/Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Flag__c</fullName>
    <label>Duplicate Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Duplicate Flag</description>
</CustomField>