force-app/main/default/objects/Lead/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <description>Enrichment Status</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>