force-app/main/default/objects/Lead/fields/Lead_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Value__c</fullName>
    <label>Lead Score Value</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Lead Score Value</description>
</CustomField>