force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <description>Product Interest</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packaged_Water</fullName>
                <default>true</default>
                <label>Packaged_Water</label>
            </value>
            <value>
                <fullName>Sparkling</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>