force-app/main/default/objects/Lead/fields/Routing_Priority__c.field-meta.xml
<CustomField>
    <fullName>Routing_Priority__c</fullName>
    <label>Routing Priority</label>
    <type>Picklist</type>
    <description>Routing Priority</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>