force-app/main/default/objects/Lead/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <description>Source Channel</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>Call_Center</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Mobile_App</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Marketing_System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>