force-app/main/default/objects/Lead/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <label>Territory Code</label>
    <type>Text</type>
    <length>20</length>
    <description>Territory Code</description>
</CustomField>