force-app/main/default/objects/Lead/fields/Visit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Due_Date__c</fullName>
    <label>Visit Due Date</label>
    <type>Date</type>
    <description>Visit Due Date</description>
</CustomField>