force-app/main/default/objects/Lead/fields/Working_Hours_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Eligible__c</fullName>
    <label>Working Hours Eligible</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Working Hours Eligible</description>
</CustomField>